@@ -1,3 +1,11 @@
+2001-08-23  Kurt Garloff  <kurt@garloff.de>
+       
+       * integrate.c (function_cannot_inline_p): Reduce max size for
+       inlining from 10000 to 240, twice this value (i.e. 480) for leaf
+       functions. Round up in INTEGRATE_THRESHOLD.
+       * toplev.c (rest_of_compilation): Set current_function_is_leaf 
+       for function_cannot_inline_p
+
 2001-01-25  Bernd Schmidt  <bernds@redhat.co.uk>
 
 	* version.c: Bump.
